Added Portal Scene Change

--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -37,59 +37,57 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,163
-Size=370,374
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Properties]
-Pos=0,539
-Size=370,541
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Content Browser]
-Pos=1550,623
-Size=370,457
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Stats]
-Pos=1550,163
-Size=370,167
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][Settings]
-Pos=1550,332
-Size=370,289
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Viewport]
-Pos=372,163
-Size=1176,917
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][##toolbar]
 Pos=0,24
-Size=1920,137
+Size=478,549
 Collapsed=0
 DockId=0x0000000B,0
 
+[Window][Properties]
+Pos=0,575
+Size=478,505
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Content Browser]
+Pos=1550,667
+Size=370,413
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Stats]
+Pos=1550,24
+Size=370,224
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Settings]
+Pos=1550,250
+Size=370,415
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Viewport]
+Pos=480,24
+Size=1068,1056
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][##toolbar]
+ViewportPos=698,1165
+ViewportId=0x28257B55
+Size=1920,96
+Collapsed=0
+
 [Docking][Data]
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=8,55 Size=1920,1056 Split=Y
-  DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=1920,137 Selected=0xF0F70764
-  DockNode          ID=0x0000000C Parent=0x3BC79352 SizeRef=1920,917 Split=X
-    DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=370,1056 Split=Y Selected=0x199AB496
-      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=369,374 Selected=0x2E9237F7
-      DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=369,540 Selected=0x199AB496
-    DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1548,1056 Split=X
-      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=1176,1056 CentralNode=1 Selected=0x13926F0B
-      DockNode      ID=0x00000005 Parent=0x00000006 SizeRef=370,1056 Split=Y Selected=0x2E4EBCAA
-        DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=370,167 Selected=0x2E4EBCAA
-        DockNode    ID=0x0000000A Parent=0x00000005 SizeRef=370,747 Split=Y Selected=0x54723243
-          DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=370,289 Selected=0x54723243
-          DockNode  ID=0x00000003 Parent=0x0000000A SizeRef=370,456 Selected=0xBF096F38
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,55 Size=1920,1056 Split=X Selected=0x13926F0B
+  DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=478,1056 Split=Y Selected=0x2E9237F7
+    DockNode      ID=0x0000000B Parent=0x00000009 SizeRef=369,549 Selected=0x2E9237F7
+    DockNode      ID=0x0000000C Parent=0x00000009 SizeRef=369,505 Selected=0x199AB496
+  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=1440,1056 Split=X
+    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=1068,1056 CentralNode=1 Selected=0x13926F0B
+    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=370,1056 Split=Y Selected=0x54723243
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=370,203 Selected=0x2E4EBCAA
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=370,752 Split=Y Selected=0x54723243
+        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=370,432 Selected=0x54723243
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=370,429 Selected=0xBF096F38
 
