--- a/Resources/assets/textures/desktop.ini
+++ b/Resources/assets/textures/desktop.ini
@@ -5,3 +5,5 @@ HpBarBackground.png=@HpBarBackground.png,0
 HpPotion.png=@HpPotion.png,0
 HpRecovery.png=@HpRecovery.png,0
 HpBar.png=@HpBar.png,0
+BestFriendLightMap.png=@BestFriendLightMap.png,0
+BestFriend.png=@BestFriend.png,0
