--- a/ClassLibrary1/ScriptCore.csproj
+++ b/ClassLibrary1/ScriptCore.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scene\SceneManager.cs" />
     <Compile Include="ScriptableObject.cs" />
     <Compile Include="Collision2D.cs" />
     <Compile Include="InternalCalls.cs" />
@@ -50,8 +51,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scene\Components.cs" />
     <Compile Include="Scene\Entity.cs" />
+    <Compile Include="Timer.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
+    <Compile Include="Vector4.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
