--- a/SYScript/SYScript.csproj
+++ b/SYScript/SYScript.csproj
@@ -45,15 +45,22 @@
     <Compile Include="AccessoryData.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="CostumeData.cs" />
+    <Compile Include="Inventory.cs" />
     <Compile Include="InventoryData.cs" />
-    <Compile Include="ItemData.cs" />
+    <Compile Include="ItemDatas\ItemData.cs" />
+    <Compile Include="ItemDatas\Weapon\BestFriend.cs" />
+    <Compile Include="ItemDatas\Weapon\HolySword.cs" />
+    <Compile Include="ItemDatas\Weapon\Steeleto.cs" />
+    <Compile Include="LoadingSceneController.cs" />
+    <Compile Include="Portal.cs" />
     <Compile Include="ObjectManager.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="SpellData.cs" />
+    <Compile Include="TitleSceneController.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WeaponData.cs" />
+    <Compile Include="ItemDatas\Weapon\WeaponData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\ScriptCore.csproj">
@@ -61,5 +68,6 @@
       <Name>ScriptCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
